# raytracer

./: CMakeLists.txt  README.md
raytracer_try/: try_raytracer.sh
render/: CMakeLists.txt
render/include/: bytes.h  camera.h  color.h  image.h  light.h  material.h  point.h  ray.h  raytracer.h  render.h  shape.h  shape_plane.h  shape_sphere.h  shape_triangle.h  texture.h  vector.h
render/src/: raytracer.cpp
rt_demo/: CMakeLists.txt
rt_demo/include/: raytracer_demo.h
rt_demo/src/: main.cpp  raytracer_demo.cpp
tests/: CMakeLists.txt
tests/data/rt_demo/: scene.json  spheres.json  triangles.json
tests/include/: tests.h
tests/src/: test_bytes.cpp  test_camera.cpp  test_color.cpp  test_image.cpp  test_light.cpp  test_material.cpp  test_point.cpp  test_ray.cpp  test_raytracer.cpp  test_shape_plane.cpp  test_shape_sphere.cpp  test_shape_triangle.cpp  test_texture.cpp  test_vector.cpp
tests/tools/: notes.txt
